// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component renders 1`] = `
@media  {
  .c-kpcewD {
    background: var(--colors-primary);
    border-radius: var(--radii-round);
    height: 100%;
    position: absolute;
  }

  .c-nJgcq {
    border-radius: var(--radii-round);
    flex-grow: 1;
    position: relative;
  }

  .c-nJgcq[data-orientation="horizontal"] {
    height: var(--space-1);
  }

  .c-nJgcq[data-orientation="vertical"] {
    width: var(--space-1);
  }

  .c-fulXRN {
    background: var(--colors-primaryMid);
    border-radius: var(--radii-round);
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-fulXRN:hover {
    background: var(--colors-primaryDark);
  }

  .c-fulXRN:focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-kLXlVQ {
    background: red;
    align-items: center;
    display: flex;
    position: relative;
    touch-action: none;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
  }

  .c-kLXlVQ[data-orientation="horizontal"] {
    height: var(--sizes-1);
    width: 100%;
  }

  .c-kLXlVQ[data-orientation="vertical"] {
    flex-direction: column;
    width: var(--sizes-1);
    height: 100%;
  }

  .c-kLXlVQ[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kLXlVQ-dOexvR-theme-tonal .c-nJgcq {
    background: var(--colors-tonal200);
  }
}

@media  {
  .c-PJLV-ihXBgCy-css {
    width: 100px;
    height: auto;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ihXBgCy-css"
  >
    <span
      aria-disabled="false"
      class="c-kLXlVQ c-kLXlVQ-dOexvR-theme-tonal"
      data-orientation="horizontal"
      dir="ltr"
      style="--radix-slider-thumb-transform: translateX(-50%);"
    >
      <span
        class="c-nJgcq"
        data-orientation="horizontal"
      >
        <span
          class="c-kpcewD"
          data-orientation="horizontal"
          style="left: 0%; right: 50%;"
        />
      </span>
      <span
        style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
      >
        <span
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="c-fulXRN"
          data-orientation="horizontal"
          data-radix-collection-item=""
          role="slider"
          style=""
          tabindex="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider component renders with a steps list 1`] = `
@media  {
  .c-kpcewD {
    background: var(--colors-primary);
    border-radius: var(--radii-round);
    height: 100%;
    position: absolute;
  }

  .c-nJgcq {
    border-radius: var(--radii-round);
    flex-grow: 1;
    position: relative;
  }

  .c-nJgcq[data-orientation="horizontal"] {
    height: var(--space-1);
  }

  .c-nJgcq[data-orientation="vertical"] {
    width: var(--space-1);
  }

  .c-fulXRN {
    background: var(--colors-primaryMid);
    border-radius: var(--radii-round);
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-fulXRN:hover {
    background: var(--colors-primaryDark);
  }

  .c-fulXRN:focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-kLXlVQ {
    background: red;
    align-items: center;
    display: flex;
    position: relative;
    touch-action: none;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
  }

  .c-kLXlVQ[data-orientation="horizontal"] {
    height: var(--sizes-1);
    width: 100%;
  }

  .c-kLXlVQ[data-orientation="vertical"] {
    flex-direction: column;
    width: var(--sizes-1);
    height: 100%;
  }

  .c-kLXlVQ[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kLXlVQ-dOexvR-theme-tonal .c-nJgcq {
    background: var(--colors-tonal200);
  }
}

@media  {
  .c-PJLV-ihXBgCy-css {
    width: 100px;
    height: auto;
  }
}

<div>
  <div
    class="c-PJLV c-PJLV-ihXBgCy-css"
  >
    <span
      aria-disabled="false"
      class="c-kLXlVQ c-kLXlVQ-dOexvR-theme-tonal"
      data-orientation="horizontal"
      dir="ltr"
      steps="[object Object],[object Object],[object Object]"
      style="--radix-slider-thumb-transform: translateX(-50%);"
    >
      <span
        class="c-nJgcq"
        data-orientation="horizontal"
      >
        <span
          class="c-kpcewD"
          data-orientation="horizontal"
          style="left: 0%; right: 50%;"
        />
      </span>
      <span
        style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(50% + 0px);"
      >
        <span
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="c-fulXRN"
          data-orientation="horizontal"
          data-radix-collection-item=""
          role="slider"
          style=""
          tabindex="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider.Value component renders 1`] = `
@media  {
  .c-kpcewD {
    background: var(--colors-primary);
    border-radius: var(--radii-round);
    height: 100%;
    position: absolute;
  }

  .c-nJgcq {
    border-radius: var(--radii-round);
    flex-grow: 1;
    position: relative;
  }

  .c-nJgcq[data-orientation="horizontal"] {
    height: var(--space-1);
  }

  .c-nJgcq[data-orientation="vertical"] {
    width: var(--space-1);
  }

  .c-fulXRN {
    background: var(--colors-primaryMid);
    border-radius: var(--radii-round);
    display: block;
    height: var(--sizes-1);
    width: var(--sizes-1);
  }

  .c-fulXRN:hover {
    background: var(--colors-primaryDark);
  }

  .c-fulXRN:focus-visible {
    outline: none;
    position: relative;
    z-index: 1;
    box-shadow: white 0px 0px 0px 2px, var(--colors-primary) 0px 0px 0px 4px;
  }

  .c-kLXlVQ {
    background: red;
    align-items: center;
    display: flex;
    position: relative;
    touch-action: none;
    -webkit-user-select: none;
    user-select: none;
    cursor: pointer;
  }

  .c-kLXlVQ[data-orientation="horizontal"] {
    height: var(--sizes-1);
    width: 100%;
  }

  .c-kLXlVQ[data-orientation="vertical"] {
    flex-direction: column;
    width: var(--sizes-1);
    height: 100%;
  }

  .c-kLXlVQ[data-disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }
}

@media  {
  .c-kLXlVQ-dOexvR-theme-tonal .c-nJgcq {
    background: var(--colors-tonal200);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

@media  {
  .c-PJLV-ihXBgCy-css {
    width: 100px;
    height: auto;
  }

  .c-dyvMgW-iQwDky-css {
    margin-top: var(--space-4);
    color: var(--colors-tonal300);
    width: 100%;
  }
}

<div>
  <p
    class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-dyvMgW-iQwDky-css"
  >
    Current value is 50
  </p>
</div>
`;
